<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    
    <!-- Img Previa -->
    <ImageView
        android:id="@+id/imgPreviaPeli"
        android:contentDescription="@string/imgPeli"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp" >
    </ImageView>
 
    <!-- Nombre -->
    <TextView
        android:id="@+id/nombrePeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgPreviaPeli"
        android:layout_toRightOf="@+id/imgPreviaPeli"
        android:layout_toEndOf="@+id/imgPreviaPeli"
        android:textStyle="bold"
        android:textColor="#3b5bb6"
        android:textSize="18sp" >
    </TextView>
 
    <!-- Cine Artesiete -->
    <TextView
        android:id="@+id/cineAPeli"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombrePeli"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/imgPreviaPeli"
        android:layout_toEndOf="@+id/imgPreviaPeli"
        android:text="@string/cineArtesiete"
        android:textColor="#ff501f"
        android:textStyle="bold" >
    </TextView>
 
    <!-- Horario Artesiete -->
    <TextView
        android:id="@+id/horarioAPeli"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cineAPeli"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/imgPreviaPeli"
        android:layout_toEndOf="@+id/imgPreviaPeli" >
    </TextView>
    
    <!-- Cine Luz de Castilla -->
    <TextView
        android:id="@+id/cineBPeli"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horarioAPeli"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/imgPreviaPeli"
        android:layout_toEndOf="@+id/imgPreviaPeli"
        android:text="@string/cineLuzCastilla"
        android:textColor="#1cb1dc"
        android:textStyle="bold" >
    </TextView>
 
    <!-- Horario LuzCastilla -->
    <TextView
        android:id="@+id/horarioBPeli"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cineBPeli"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/imgPreviaPeli"
        android:layout_toEndOf="@+id/imgPreviaPeli" >
    </TextView>
</RelativeLayout>